--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  <h1>Hello, World!</h1>
+  <nav>
+    <a href="#">
+      <img src="assets/logo.svg" alt="logo">
+    </a>
+    <a href="#">
+      <img src="assets/icons/shopping-bag.svg" alt="carrinho de compras">
+      <span>1</span>
+    </a>
+  </nav>
 </body>
 </html>
