--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@
       <span>1</span>
     </a>
   </nav>
+
+  <section id="hero">
+    <div>
+      <h1>
+        Snitap, sua vida mais
+        <div>
+          <span>Radical</span>
+          <span>Divertida</span>
+          <span>Saúdavel</span>
+          <span>Radical</span>
+        </div>
+      </h1>
+    </div>
+  </section>
 </body>
 </html>
