--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
         </a>
       </div>
     </div>
+
+    <div>
+      <div class="content">
+        <img src="assets/hero/Ellipse.svg" alt="">
+        <img src="assets/hero/patins-image.png" alt="">
+        <img src="assets/hero/Stars1.svg" alt="">
+        <img src="assets/hero/Stars2.svg" alt="">
+      </div>
+    </div>
   </section>
 </body>
 </html>
