--- a/index.html
+++ b/index.html
@@ -57,5 +57,34 @@
       </div>
     </div>
   </section>
+
+  <section class="banner">
+    <div class="scroller">
+      <div class="rolling">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+        <img src="assets/icons/list.svg" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
