--- a/index.html
+++ b/index.html
@@ -86,5 +86,46 @@
       </div>
     </div>
   </section>
+
+  <section id="galery">
+    <header>
+      <span>GALERIA DE FOTOS</span>
+      <h2>#usesnitap por aí</h2>
+    </header>
+
+    <div class="content">
+      <figure>
+        <img src="assets/images/01.png" alt="">
+        <figcaption>
+          <img src="assets/icons/perfil.svg" alt="">
+          <span>@User</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assets/images/02.png" alt="">
+        <figcaption>
+          <img src="assets/icons/perfil.svg" alt="">
+          <span>@User</span>
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="assets/images/03.png" alt="">
+        <figcaption>
+          <img src="assets/icons/perfil.svg" alt="">
+          <span>@User</span>
+        </figcaption>
+      </figure>
+
+      <figure data-delay>
+        <img src="assets/images/04.png" alt="">
+        <figcaption>
+          <img src="assets/icons/perfil.svg" alt="">
+          <span>@User</span>
+        </figcaption>
+      </figure>
+    </div>
+  </section>
 </body>
 </html>
